<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            style="@style/Theme.GroceryList.Text.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_the_app" />

        <TextView
            android:id="@+id/launch_date"
            style="@style/Theme.GroceryList.Text.Highlight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/launch_date" />

        <TextView
            android:id="@+id/version"
            style="@style/Theme.GroceryList.Text.Highlight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version" />

        <TextView
            android:id="@+id/textView2"
            style="@style/Theme.GroceryList.Text.Highlight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author" />

        <TextView
            android:id="@+id/textView3"
            style="@style/Theme.GroceryList.Text.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about" />

        <TextView
            android:id="@+id/textView4"
            style="@style/Theme.GroceryList.Text.Highlight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_is" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>