<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.grocerylist.fragments.HomeFragment"
        android:label=""
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_addProductFragment"
            app:destination="@id/addProductFragment" />
        <action
            android:id="@+id/action_homeFragment_to_editProductFragment"
            app:destination="@id/editProductFragment" />
    </fragment>
    <fragment
        android:id="@+id/addProductFragment"
        android:name="com.example.grocerylist.fragments.AddProductFragment"
        android:label="@string/add_product_screen_title"
        tools:layout="@layout/fragment_add_product" >
        <action
            android:id="@+id/action_addProductFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/editProductFragment"
        android:name="com.example.grocerylist.fragments.EditProductFragment"
        android:label="@string/edit_product_screen_title"
        tools:layout="@layout/fragment_edit_product" >
        <action
            android:id="@+id/action_editProductFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.grocerylist.fragments.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
</navigation>